Moved processing of client session stats cleanup to internode kafka topic